--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Guang-He Lee</title>
+    <title>Yu-Chen Lin</title>
 
     <!-- Bootstrap -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Guang-He Lee</a>
+          <a class="navbar-brand" href="/">Yu-Chen Lin</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -58,7 +58,7 @@
 	<li><a href="https://docs.google.com/forms/d/1uzfY5pjrTd0yv04wIKP0sAhlKSxn5jAPzd7YoOvqxlE/viewform" class="icon fa-envelope-o"><span class="label">Email</span></a></li>-->
       </ul>
       <ul class="copyright">
-        <li>&copy; Guang-He Lee</li>
+        <li>&copy; Yu-Chen Lin</li>
       </ul>
     </footer>
 
