--- a/about.html
+++ b/about.html
@@ -9,24 +9,44 @@
   <h1>Education</h1>	
   <ul>
     <li>
-      <b>Massachusetts Institute of Technology (MIT)</b>, Cambridge, MA, 2017/09 – now<br />
-      Ph.D. in Computer Science and Artificial Intelligence Laboratory (CSAIL)<br />
-      - Advisor: Prof. <a href="https://people.csail.mit.edu/tommi/" target="_blank">Tommi S. Jaakkola</a>
+      <b>National Taiwan University (NTU)</b>, Taipei, Taiwan, 2016/09 – present<br />
+      Ph.D. in Computer Science and Information Engineering (CSIE)<br />
+      - Advisor: Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a><br />
+      - Advisor: Prof. <a href="https://www.citi.sinica.edu.tw/pages/yu.tsao/" target="_blank">Yu Tsao</a><br />
     </li>
   	<li>
-      <b>National Taiwan University (NTU)</b>, Taipei, Taiwan, 2016/09 – 2017/06<br />
+      <b>National Taiwan University (NTU)</b>, Taipei, Taiwan, 2015/09 – 2016/06<br />
   	  M.S. in Computer Science and Information Engineering (CSIE)<br />
-      - Advisor: Prof. <a href="http://www.csie.ntu.edu.tw/~yvchen/" target="_blank">Yun-Nung (Vivian) Chen</a><br />
-      - <a href="doc/masters-thesis-final-download.pdf" target="_blank">Thesis</a>
+      - Advisor: Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a><br />
     </li>
     <li>
       <b>National Taiwan University</b>, Taipei, Taiwan, 2011/09 – 2015/06<br />
-      B.S. in Computer Science and Information Engineering.<br />
-      - GPA: 4.20/4.30; Rank: 2/111.<br />
-      - Straight A+ in all undergraduate CSIE courses.<br />
+      B.S. in Computer Science and Information Engineering (CSIE).<br />
     </li>
   </ul>
 </section>
+
+<section>
+  <h1>Experiences</h1>
+  <ul>
+    <li>
+      <b>Visiting Scholar</b>, Jul. 2020 - present <br />
+      The Department of Electrical and Computer Engineering (ECE) in University of California San Diego (UCSD) and Qualcomm Institute - UCSD Division of Calit2<br />
+    </li>
+    <li>
+      <b>Research Asistant</b>, 2017 - present <br />
+      Research Center for Information Technology Innovation, Academia Sinica, Taiwan<br />
+    </li>
+    <li>
+      <b>Teaching Asistant</b><br />
+      - Operating Systems, NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~cwhsueh/" target="_blank">Chih-Wen Hsueh</a>), Spring 2019<br />
+      - Operating Systems, NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a>), Spring 2018<br />
+      - Operating Systems, NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a>), Spring 2017<br />
+      - Discrete Mathematics NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~lyuu/" target="_blank">Yuh-Dauh Lyuu</a>), Spring 2016<br />
+    </li>
+  </ul>
+</section>
+
 
 <section>
   <h1>Honors and Awards</h1>  
@@ -69,34 +89,6 @@
     -->
   </ul>
 </section>
-
-<!--
-<section>
-  <h1>Research Experience (details in Publications and Projects page)</h1>
-  <ul>
-    <li>
-      <b>Machine Intelligence and Understanding Lab, NTU</b>, 2016/09 – present<br />
-      Advisor: Prof. Yun-Nung (Vivian) Chen <br />
-        - Multi-Prototype Word Embeddings<br />
-    </li>
-    <li>
-      <b>Intel Labs, Intel Corporation</b>, 2015/06 – 2015/09<br />
-      Manager: Dr. Yen-Kuang Chen; Mentor: Dr. Shao-Wen Yang <br />
-        - Robust Factorization Model <br />
-        - Passive RFID tracking in retail stores <br />
-        - Cost-sensitive Deep Learning <br />
-    </li>
-    <li>
-      <b>Machine Discovery and Social Network Mining Lab, NTU</b>, 2014/02 – 2015/06<br />
-      Advisor: Prof. Shou-De Lin <br />
-        - Learning-to-Rank (LTR) Matrix Factorization (MF) <br />
-        - Heterogeneous Transfer Learning for Convolutional Neural Network (CNN) in Super Resolution (SR) <br />
-        - KDD Cup 2014 for predicting promising projects for DonorsChoose.org (Rank 12/472), jointly advised by Prof. Chih-Jen Lin <br />
-        - Multi-round Multi-party Influence Maximization (IM) in Social Network <br />
-    </li>
-  </ul>
-</section>
--->
 
 <section>
   <h1>Leadership & Activities</h1>  
