modify home and about

--- a/about.html
+++ b/about.html
@@ -9,18 +9,18 @@
   <h1>Education</h1>	
   <ul>
     <li>
-      <b>National Taiwan University (NTU)</b>, Taipei, Taiwan, 2016/09 – present<br />
-      Ph.D. in Computer Science and Information Engineering (CSIE)<br />
+      <b>National Taiwan University (NTU)</b>, Taipei, Taiwan (R.O.C.), 2016/09 – present<br />
+      Ph.D. in Computer Science and Information Engineering (CSIE).<br />
       - Advisor: Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a><br />
       - Advisor: Prof. <a href="https://www.citi.sinica.edu.tw/pages/yu.tsao/" target="_blank">Yu Tsao</a><br />
     </li>
   	<li>
-      <b>National Taiwan University (NTU)</b>, Taipei, Taiwan, 2015/09 – 2016/06<br />
-  	  M.S. in Computer Science and Information Engineering (CSIE)<br />
+      <b>National Taiwan University (NTU)</b>, Taipei, Taiwan (R.O.C.), 2015/09 – 2016/06<br />
+  	  M.S. in Computer Science and Information Engineering (CSIE).<br />
       - Advisor: Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a><br />
     </li>
     <li>
-      <b>National Taiwan University</b>, Taipei, Taiwan, 2011/09 – 2015/06<br />
+      <b>National Taiwan University (NTU)</b>, Taipei, Taiwan (R.O.C.), 2011/09 – 2015/06<br />
       B.S. in Computer Science and Information Engineering (CSIE).<br />
     </li>
   </ul>
@@ -30,19 +30,19 @@
   <h1>Experiences</h1>
   <ul>
     <li>
-      <b>Visiting Scholar</b>, Jul. 2020 - present <br />
+      <b>Visiting Scholar</b>, July 2020 - present <br />
       The Department of Electrical and Computer Engineering (ECE) in University of California San Diego (UCSD) and Qualcomm Institute - UCSD Division of Calit2<br />
     </li>
     <li>
       <b>Research Asistant</b>, 2017 - present <br />
-      Research Center for Information Technology Innovation, Academia Sinica, Taiwan<br />
+      Research Center for Information Technology Innovation, Academia Sinica, Taiwan (R.O.C.)<br />
     </li>
     <li>
       <b>Teaching Asistant</b><br />
       - Operating Systems, NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~cwhsueh/" target="_blank">Chih-Wen Hsueh</a>), Spring 2019<br />
       - Operating Systems, NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a>), Spring 2018<br />
       - Operating Systems, NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a>), Spring 2017<br />
-      - Discrete Mathematics NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~lyuu/" target="_blank">Yuh-Dauh Lyuu</a>), Spring 2016<br />
+      - Discrete Mathematics, NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~lyuu/" target="_blank">Yuh-Dauh Lyuu</a>), Spring 2016<br />
     </li>
   </ul>
 </section>
@@ -52,89 +52,53 @@
   <h1>Honors and Awards</h1>  
   <ul>
     <li>
-      <b>Best Master Thesis Award</b>, <i>ACLCLP</i>, 2017<br />
-      Recognizes the best master thesis in NLP research among all universities in Taiwan.
+      <b>Graduate Student Study Abroad Program Scholarship</b>, Ministry of Science and Technology, Taiwan, 2019<br />
+      Honors 105 PhD students in academic performance in Taiwan (R.O.C.).<br />
     </li>
+
     <li>
-      <b>Best Master Thesis Award</b>, <i>TAAI</i>, 2017<br />
-      Recognizes the best master thesis in AI research among all universities in Taiwan.
+      <b>Excellent Teaching Assistant</b>, <i>NTU</i>, 2018<br />
+      Honors excellent teaching assistant in the semester.<br />
+      - Course: Operating Systems, NTU (Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a>).
     </li>
+    
     <li>
-      <b>Presidential Awards (8 times)</b>, <i>NTU</i>, 2011-2015<br />
-      Recognizes students with top 5% GPA in each department.
+      <b>Staight Entering PhD Programs Scholarship</b>, <i>NTU</i>, Sep. 2018-Aug. 2019<br />
+      Honors the PhD students in Program of Research Performance Enhancement via Students Entering PhD Programs Straight from an Undergraduate/Master's Program.<br />
     </li>
-    <li>
-      <b>The Honorary Member of the Phi Tau Phi Scholastic Honor Society</b>, <i>Phi Tau Phi Scholastic Honor Society, Taiwan</i>, 2015<br/>
-      Honors top 1% of undergraduate graduands in academic performance and moral conduct among about 300 graduands in the College of EECS at NTU.
-    </li>
-    <li>
-      <b>Undergraduate Research Project Exhibition Awards</b>, <i>NTU CSIE, Appier Inc., and Delta Inc.</i>, 2015<br/>
-      2 First Place and 1 Second Place from the 3 organizers among undergraduate research projects recommended by faculty (17 projects in total). 
-    </li>
-    <li>
-      <b>Microsoft-IEEE Young Fellowship</b>, <i>Microsoft Research Asia and IEEE</i>, 2014<br />
-      Recognizes prominent young researchers in Asia (3 recipients in Taiwan).
-    </li>
-    <li>
-      <b>Irving T. Ho Memorial Scholarship</b>, <i>Irving T. Ho Memorial Foundation</i>, 2013 and 2014<br />
-      Awards to top undergraduate students in the College of EECS at NTU (4 recipients in 2013 and 2 recipients in 2014).<br />
-    </li>
-    <!--
-    <li>
-      <b>Excellent Performance Award</b>, <i>TSMC Big Data Competition</i>, 2014<br />
-      The largest annual data analytic competition in Taiwan with 124 teams in 2014.<br />
-      - Advised by Prof. Hsuan-Tien Lin.<br />
-      - Developed an Genetic Algorithm for feature selection in high dimensional data.<br />
-    </li>
-    -->
+
   </ul>
 </section>
 
 <section>
-  <h1>Leadership & Activities</h1>  
+  <h1>Academic Activities</h1>  
   <ul>
-    <!--
     <li>
-      <b>Substitute Military Service</b>, <i>Yunlin, Taiwan</i>, Oct. 2015 - Oct. 2016 <br />
-      - Mandatory military service in Taiwan. <br />
-    </li>
-    -->
-    <li>
-      <b>Program Committee Member</b> <br />
-      - the 33rd AAAI Conference on Artificial Intelligence (AAAI 2019). <br />
-    </li>
-    <li>
-      <b>Reviewer</b> <br />
-      - the 29th International Joint Conference on Artificial Intelligence and the 17th Pacific Rim International Conference on Artificial Intelligence (IJCAI-PRICAI 2020). <br />
-      - 2019 ICML workshop on Learning and Reasoning with Graph-Structured Representations. <br />
-      - 2018 ICML workshop on Theoretical Foundations and Applications of Deep Generative Models. <br />
-    </li>
-    <li>
-      <b>Teaching Assistant</b>, <i>Dept. of IDSS, MIT</i>, 2018 <br />
-      - Applied Machine Learning (Spring 2018), instructed by Prof. Tommi S. Jaakkola and Prof. Regina Barzilay. <br />
-    </li>
-    <li>
-      <b>Teaching Assistant</b>, <i>Dept. of CSIE, NTU</i>, 2013 and 2016 <br />
-      - Machine Discovery (Fall 2016), instructed by Prof. Shou-De Lin. <br />
-      - Algorithm Design and Analysis (Fall 2013), instructed by Prof. Hsin-Mu Tsai. <br />
-    </li>
-    <li>
-      <b>Student Volunteer</b>, <i>Ukulele Club, NTU</i>, 2014 <br />
-      - Charity camp for countryside elementary school. <br />
-      - Raised 40 ukuleles and taught disadvantaged children to play ukulele. <br />
-    </li>
-    <li>
-      <b>Director of Team Mentors</b>, <i>Dept. of CSIE, NTU</i>, 2012 <br />
-      - Led 20 mentors (college students) to train 100 participated senior high school students on basic computer science. <br />
-    </li>
-    <li>
-      <b>Graduate Speech</b>, <i>graduation commencement in the affiliated Senior High School of National Taiwan Normal University</i>, 2011 <br />
-      - Represented over 1,000 senior high school graduands to deliver the graduation speech. <br />
-    </li>
-    <li>
-      <b>Director of Public Relation</b>, <i>sign language club in the affiliated Senior High School of National Taiwan Normal University</i>, 2009-2010 <br />
-      - Coordinated with club representatives from other senior high schools. <br />
-      - Organized a joint performance with 31 senior high schools for more than 1,300 audience. <br />
+      <b>Activities</b>
+      - Attendance of the INTERSPEECH 2020, October 26-29, 2020
+      - Speaker of the Doctoral Consortium Program at the 31st annual Conference on Computational Linguistics and Speech Processing (ROCLING 2019), New Taipei City, Taiwan, October 3-5, 2019
+      - Speaker of the INTERSPEECH 2019, Graz, Austria, September 15-19, 2019
+      - Speaker of the 25th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2019), Lausanne, Switzerland, July 29-31, 2019
+      - Speaker of the IEEE Spoken Language Technology (SLT 2018), Athens, Greece, December 18-21, 2018
+      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, October 27, 2018
+      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, October 28, 2017
+      - Attendance of the 23rd IEEE International Conference on Embedded and Real-Time Computing Systems and Applications (RTCSA), Hsinchu, Taiwan, August 16-18, 2017
+      - Attendance of the 6th IEEE Non-Volatile Memory Systems and Applications Symposium (NVMSA), Hsinchu, Taiwan, August 16-18, 2017
+      - Staff member of the 23th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2017), Taipei City, Taiwan, July 24-26, 2017
+
+      <b>Journal and Conference Paper review as External Reviewer</b>
+      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2020
+      - IEEE/ACM Design Automation Conference (DAC), Jan. 2020
+      - IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), Dec. 2019
+      - Transaction on Computers (TC), Aug. 2019
+      - Manuscripts of the Real-Time Systems (RTS), Jun. 2019
+      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2019
+      - International Workshop on Next-Generation Operating Systems for Cyber-Physical Systems (NGOSCPS), Feb. 2019
+      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2018
+      - International Conference on Embedded Software (EMSOFT) May. 2017
+      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED) Apr. 2017
+      - Workshop on Embedded and Cyber-Physical Systems Education (WESE) Aug. 2016
+      - International Conference on Embedded Software (EMSOFT) May. 2016
     </li>
   </ul>
 </section>
