modify home and about

--- a/about.html
+++ b/about.html
@@ -74,31 +74,31 @@
   <h1>Academic Activities</h1>  
   <ul>
     <li>
-      <b>Activities</b>
-      - Attendance of the INTERSPEECH 2020, October 26-29, 2020
-      - Speaker of the Doctoral Consortium Program at the 31st annual Conference on Computational Linguistics and Speech Processing (ROCLING 2019), New Taipei City, Taiwan, October 3-5, 2019
-      - Speaker of the INTERSPEECH 2019, Graz, Austria, September 15-19, 2019
-      - Speaker of the 25th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2019), Lausanne, Switzerland, July 29-31, 2019
-      - Speaker of the IEEE Spoken Language Technology (SLT 2018), Athens, Greece, December 18-21, 2018
-      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, October 27, 2018
-      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, October 28, 2017
-      - Attendance of the 23rd IEEE International Conference on Embedded and Real-Time Computing Systems and Applications (RTCSA), Hsinchu, Taiwan, August 16-18, 2017
-      - Attendance of the 6th IEEE Non-Volatile Memory Systems and Applications Symposium (NVMSA), Hsinchu, Taiwan, August 16-18, 2017
-      - Staff member of the 23th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2017), Taipei City, Taiwan, July 24-26, 2017
+      <b>Activities</b><br />
+      - Attendance of the INTERSPEECH 2020, October 26-29, 2020<br />
+      - Speaker of the Doctoral Consortium Program at the 31st annual Conference on Computational Linguistics and Speech Processing (ROCLING 2019), New Taipei City, Taiwan, October 3-5, 2019<br />
+      - Speaker of the INTERSPEECH 2019, Graz, Austria, September 15-19, 2019<br />
+      - Speaker of the 25th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2019), Lausanne, Switzerland, July 29-31, 2019<br />
+      - Speaker of the IEEE Spoken Language Technology (SLT 2018), Athens, Greece, December 18-21, 2018<br />
+      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, October 27, 2018<br />
+      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, October 28, 2017<br />
+      - Attendance of the 23rd IEEE International Conference on Embedded and Real-Time Computing Systems and Applications (RTCSA), Hsinchu, Taiwan, August 16-18, 2017<br />
+      - Attendance of the 6th IEEE Non-Volatile Memory Systems and Applications Symposium (NVMSA), Hsinchu, Taiwan, August 16-18, 2017<br />
+      - Staff member of the 23th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2017), Taipei City, Taiwan, July 24-26, 2017<br />
 
-      <b>Journal and Conference Paper review as External Reviewer</b>
-      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2020
-      - IEEE/ACM Design Automation Conference (DAC), Jan. 2020
-      - IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), Dec. 2019
-      - Transaction on Computers (TC), Aug. 2019
-      - Manuscripts of the Real-Time Systems (RTS), Jun. 2019
-      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2019
-      - International Workshop on Next-Generation Operating Systems for Cyber-Physical Systems (NGOSCPS), Feb. 2019
-      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2018
-      - International Conference on Embedded Software (EMSOFT) May. 2017
-      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED) Apr. 2017
-      - Workshop on Embedded and Cyber-Physical Systems Education (WESE) Aug. 2016
-      - International Conference on Embedded Software (EMSOFT) May. 2016
+      <b>Journal and Conference Paper review as External Reviewer</b><br />
+      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2020<br />
+      - IEEE/ACM Design Automation Conference (DAC), Jan. 2020<br />
+      - IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), Dec. 2019<br />
+      - Transaction on Computers (TC), Aug. 2019<br />
+      - Manuscripts of the Real-Time Systems (RTS), Jun. 2019<br />
+      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2019<br />
+      - International Workshop on Next-Generation Operating Systems for Cyber-Physical Systems (NGOSCPS), Feb. 2019<br />
+      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2018<br />
+      - International Conference on Embedded Software (EMSOFT) May. 2017<br />
+      - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED) Apr. 2017<br />
+      - Workshop on Embedded and Cyber-Physical Systems Education (WESE) Aug. 2016<br />
+      - International Conference on Embedded Software (EMSOFT) May. 2016<br />
     </li>
   </ul>
 </section>
