modify home and about

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
   <ul>
     <li>
       <b>Graduate Student Study Abroad Program Scholarship</b>, Ministry of Science and Technology, Taiwan, 2019<br />
-      Honors 105 PhD students in academic performance in Taiwan (R.O.C.).<br />
+      Honors 105 Ph.D. students in academic performance in Taiwan (R.O.C.).<br />
     </li>
 
     <li>
@@ -63,8 +63,8 @@
     </li>
     
     <li>
-      <b>Staight Entering PhD Programs Scholarship</b>, <i>NTU</i>, Sep. 2018-Aug. 2019<br />
-      Honors the PhD students in Program of Research Performance Enhancement via Students Entering PhD Programs Straight from an Undergraduate/Master's Program.<br />
+      <b>Staight Entering Ph.D. Programs Scholarship</b>, <i>NTU</i>, Sep. 2018-Aug. 2019<br />
+      Honors the Ph.D. students in Program of Research Performance Enhancement via Students Entering Ph.D. Programs Straight from an Undergraduate/Master's Program.<br />
     </li>
 
   </ul>
