modify about and publications

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
   <h1>Honors and Awards</h1>  
   <ul>
     <li>
-      <b>Graduate Student Study Abroad Program Scholarship</b>, Ministry of Science and Technology, Taiwan, 2019<br />
+      <b>Graduate Student Study Abroad Program Scholarship</b>, <i>Ministry of Science and Technology, Taiwan</i>, 2019<br />
       Honors 105 Ph.D. students in academic performance in Taiwan (R.O.C.).<br />
     </li>
 
@@ -63,8 +63,18 @@
     </li>
     
     <li>
-      <b>Staight Entering Ph.D. Programs Scholarship</b>, <i>NTU</i>, Sep. 2018-Aug. 2019<br />
-      Honors the Ph.D. students in Program of Research Performance Enhancement via Students Entering Ph.D. Programs Straight from an Undergraduate/Master's Program.<br />
+      <b>Scholarship of Program of Research Performance Enhancement via Students Entering Ph.D. Programs Straight from an Undergraduate/Master's Program</b>, <i>NTU</i>, Sep. 2018-Aug. 2019<br />
+      Honors the Staight Entering Ph.D. Programs students in academic performance.<br />
+    </li>
+
+    <li>
+      <b>Scholarship of Program of Research Performance Enhancement via Students Entering Ph.D. Programs Straight from an Undergraduate/Master's Program</b>, <i>NTU</i>, Sep. 2017-Aug. 2018<br />
+      Honors the Staight Entering Ph.D. Programs students in academic performance.<br />
+    </li>
+
+    <li>
+      <b>Scholarship of Program of Research Performance Enhancement via Students Entering Ph.D. Programs Straight from an Undergraduate/Master's Program</b>, <i>NTU</i>, Sep. 2016-Aug. 2017<br />
+      Honors the Staight Entering Ph.D. Programs students in academic performance.<br />
     </li>
 
   </ul>
@@ -75,17 +85,19 @@
   <ul>
     <li>
       <b>Activities</b><br />
-      - Attendance of the INTERSPEECH 2020, October 26-29, 2020<br />
-      - Speaker of the Doctoral Consortium Program at the 31st annual Conference on Computational Linguistics and Speech Processing (ROCLING 2019), New Taipei City, Taiwan, October 3-5, 2019<br />
-      - Speaker of the INTERSPEECH 2019, Graz, Austria, September 15-19, 2019<br />
-      - Speaker of the 25th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2019), Lausanne, Switzerland, July 29-31, 2019<br />
-      - Speaker of the IEEE Spoken Language Technology (SLT 2018), Athens, Greece, December 18-21, 2018<br />
-      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, October 27, 2018<br />
-      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, October 28, 2017<br />
-      - Attendance of the 23rd IEEE International Conference on Embedded and Real-Time Computing Systems and Applications (RTCSA), Hsinchu, Taiwan, August 16-18, 2017<br />
-      - Attendance of the 6th IEEE Non-Volatile Memory Systems and Applications Symposium (NVMSA), Hsinchu, Taiwan, August 16-18, 2017<br />
-      - Staff member of the 23th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2017), Taipei City, Taiwan, July 24-26, 2017<br />
+      - Attendance of the INTERSPEECH 2020, Oct. 26-29, 2020<br />
+      - Speaker of the Doctoral Consortium Program at the 31st annual Conference on Computational Linguistics and Speech Processing (ROCLING 2019), New Taipei City, Taiwan, Oct. 3-5, 2019<br />
+      - Speaker of the INTERSPEECH 2019, Graz, Austria, Sep. 15-19, 2019<br />
+      - Speaker of the 25th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2019), Lausanne, Switzerland, Jul. 29-31, 2019<br />
+      - Speaker of the IEEE Spoken Language Technology (SLT 2018), Athens, Greece, Dec. 18-21, 2018<br />
+      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, Oct. 27, 2018<br />
+      - Co-Host of Open House, Academia Sinica, Taipei City, Taiwan, Oct. 28, 2017<br />
+      - Attendance of the 23rd IEEE International Conference on Embedded and Real-Time Computing Systems and Applications (RTCSA), Hsinchu, Taiwan, Aug. 16-18, 2017<br />
+      - Attendance of the 6th IEEE Non-Volatile Memory Systems and Applications Symposium (NVMSA), Hsinchu, Taiwan, Aug. 16-18, 2017<br />
+      - Staff member of the 23th ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED 2017), Taipei City, Taiwan, Jul. 24-26, 2017<br />
+    </li>
 
+    <li>
       <b>Journal and Conference Paper review as External Reviewer</b><br />
       - ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), Apr. 2020<br />
       - IEEE/ACM Design Automation Conference (DAC), Jan. 2020<br />
