--- a/publication.html
+++ b/publication.html
@@ -3,30 +3,30 @@
 <section>
   <ul>
     <li>
-      <b>SEOFP-NET: Compression and Acceleration on Speech Enhancement using Sign-Exponent-Only Floating-Point Deep Neural Networks</b>
-      <u>Yu-Chen Lin</u>, Yi-Te Hsu, Szu-Wei Fu, Cheng Yu, Yu Tsao, and Tei-Wei Kuo.
-      submitted to <i>IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP)</i>, 2021
+      <b>SEOFP-NET: Compression and Acceleration on Speech Enhancement using Sign-Exponent-Only Floating-Point Deep Neural Networks</b><br />
+      <u>Yu-Chen Lin</u>, Yi-Te Hsu, Szu-Wei Fu, Cheng Yu, Yu Tsao, and Tei-Wei Kuo.<br />
+      submitted to <i>IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP)</i>, 2021<br />
     </li>
     <li>
-      <b>SERIL: Noise Adaptive Speech Enhancement using Regularization-based Incremental Learning</b>.
-      Chi-Chang Lee, <u>Yu-Chen Lin</u>, Hsuan-Tien Lin, Hsin-Min Wang, and Yu Tsao.
-      in <i>INTERSPEECH</i>, 2020
+      <b>SERIL: Noise Adaptive Speech Enhancement using Regularization-based Incremental Learning</b>.<br />
+      Chi-Chang Lee, <u>Yu-Chen Lin</u>, Hsuan-Tien Lin, Hsin-Min Wang, and Yu Tsao.<br />
+      in <i>INTERSPEECH</i>, 2020<br />
     </li>
     <li>
-      <b>IA-NET: Acceleration and Compression of Speech Enhancement using Integer-adder Network</b>.
-      <u>Yu-Chen Lin</u>, Yi-Te Hsu, Szu-Wei Fu, Yu Tsao, and Tei-Wei Kuo.
-      in <i>INTERSPEECH</i>, 2019
+      <b>IA-NET: Acceleration and Compression of Speech Enhancement using Integer-adder Network</b>.<br />
+      <u>Yu-Chen Lin</u>, Yi-Te Hsu, Szu-Wei Fu, Yu Tsao, and Tei-Wei Kuo.<br />
+      in <i>INTERSPEECH</i>, 2019<br />
     </li>
     <li>
-      <b>Autonomous I/O for Intermittent IoT Systems</b>.
-      <u>Yu-Chen Lin</u>, Pi-Cheng Hsiu, and Tei-Wei Kuo.
-      in <i>IEEE/ACM International Symposium on Low Power Electronics and Design (ISLPED)</i>, 2019
+      <b>Autonomous I/O for Intermittent IoT Systems</b>.<br />
+      <u>Yu-Chen Lin</u>, Pi-Cheng Hsiu, and Tei-Wei Kuo.<br />
+      in <i>IEEE/ACM International Symposium on Low Power Electronics and Design (ISLPED)</i>, 2019<br />
     </li>
 
     <li>
-      <b>A study on speech enhancement using exponent-only floating point quantized neural network (EOFP-QNN)</b>
-      Yi-Te Hsu, <u>Yu-Chen Lin</u>, Szu-Wei Fu, Yu Tsao, and Tei-Wei Kuo.
-      in <i>IEEE Spoken Language Technology (SLT)</i>, 2018
+      <b>A study on speech enhancement using exponent-only floating point quantized neural network (EOFP-QNN)</b><br />
+      Yi-Te Hsu, <u>Yu-Chen Lin</u>, Szu-Wei Fu, Yu Tsao, and Tei-Wei Kuo.<br />
+      in <i>IEEE Spoken Language Technology (SLT)</i>, 2018<br />
     </li>
 
     <!--
