--- a/activity.html
+++ b/activity.html
@@ -4,22 +4,22 @@
 
 <article id="2015-ml30">
   <div class="cell-image">
-    <a href="image/activities/ITA.jpg" class="image thumb-big">
-      <img src="image/activities/ITA.jpg"
-           alt="The instructed textbook in the Algorithm Design and Analysis" />
+    <a href="image/activities/OS.jpg" class="image thumb-big">
+      <img src="image/activities/OS.jpg"
+           alt="The instructed textbook in the Operating System Concepts" />
     </a>
   </div>
   <div class="cell-text-photo">
     <h3>Teaching Assistant</h3>
     <p>I served as a Teaching Assistant in the following courses:
-        <li>Applied Machine Learning (MIT, Spring 2018) (online course)<br /> 
-           - Instructed by Prof. Tommi S. Jaakkola and Regina Barzilay (graduate-level).<br />
-        <li>Algorithm Design and Analysis (NTU, Fall 2013) (82 students)<br /> 
-           - Instructed by Prof. Hsin-Mu Tsai (undergraduate-level).<br />
-        <li>Machine Discovery (NTU, Fall 2016) (90 students)<br /> 
-           - Instructed by Prof. Shou-De Lin (graduate-level).<br /> 
-        <li>Intelligent Conversational Bot (NTU, Spring 2017) (88 students)<br /> 
-           - Instructed by Prof. Yun-Nung (Vivian) Chen (graduate-level).<br /> 
+        <li>Operating Systems (NTU, Spring 2019) (170 students)<br /> 
+           - Instructed by Prof. <a href="https://www.csie.ntu.edu.tw/~cwhsueh/" target="_blank">Chih-Wen Hsueh</a> (undergraduate-level).<br />
+        <li>Operating Systems (NTU, Spring 2018) (156 students)<br /> 
+           - Instructed by Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a> (undergraduate-level).<br />
+        <li>Operating Systems (NTU, Spring 2017) (153 students)<br /> 
+           - Instructed by Prof. <a href="https://www.csie.ntu.edu.tw/~ktw/" target="_blank">Tei-Wei Kuo</a> (undergraduate-level).<br /> 
+        <li>Discrete Mathematics (NTU, Spring 2016) (155 students)<br /> 
+           - Instructed by Prof. <a href="https://www.csie.ntu.edu.tw/~lyuu/" target="_blank">Yuh-Dauh Lyuu</a> (undergraduate-level).<br /> 
     </p>
   </div>
 </article>
