--- a/publication.html
+++ b/publication.html
@@ -3,7 +3,7 @@
 <section>
   <ul>
     <li>
-      <b>SEOFP-NET: Compression and Acceleration on Speech Enhancement using Sign-Exponent-Only Floating-Point Deep Neural Networks</b><br />
+      <b>SEOFP-NET: Compression and Acceleration on Speech Enhancement using Sign-Exponent-Only Floating-Point Deep Neural Networks</b>.<br />
       <u>Yu-Chen Lin</u>, Yi-Te Hsu, Szu-Wei Fu, Cheng Yu, Yu Tsao, and Tei-Wei Kuo.<br />
       submitted to <i>IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP)</i>, 2021<br />
     </li>
@@ -24,7 +24,7 @@
     </li>
 
     <li>
-      <b>A study on speech enhancement using exponent-only floating point quantized neural network (EOFP-QNN)</b><br />
+      <b>A study on speech enhancement using exponent-only floating point quantized neural network (EOFP-QNN)</b>.<br />
       Yi-Te Hsu, <u>Yu-Chen Lin</u>, Szu-Wei Fu, Yu Tsao, and Tei-Wei Kuo.<br />
       in <i>IEEE Spoken Language Technology (SLT)</i>, 2018<br />
     </li>
