--- a/activity.html
+++ b/activity.html
@@ -24,6 +24,34 @@
   </div>
 </article>
 
+<article id="2009-marathon-fubon">
+  <div class="cell-image">
+    <a href="image/activities/star3.jpg" class="image thumb-big">
+      <img src="image/activities/star3.jpg"
+           alt="A full picture of my calligraphy work." />
+    </a>
+    <a href="image/activities/star1.jpg" class="image thumb-big hidden">
+      <img src="image/activities/star1.jpg"
+           alt="A highlight on the upper half of my calligraphy work." />
+    </a>
+    <a href="image/activities/star4.jpg" class="image thumb-big hidden">
+      <img src="image/activities/star4.jpg"
+           alt="A highlight on the lower half of my calligraphy work." />
+    </a>
+    <a href="image/activities/star2.jpg" class="image thumb-big hidden">
+      <img src="image/activities/star2.jpg"
+           alt="A highlight on sign part of my calligraphy work." />
+    </a>
+  </div>
+  <div class="cell-text-photo">
+    <h3>NTU Astronomy Club</h3>
+    <p>
+      I joined the NTU Astronomy Club from September 2016 to June 2019, and served as Director of Astronomy Teaching Assistant of Forest Biodiversity from September 2017 to June 2018. In each semester, there are 6 groups of students in NTU course "Introduction to Forest Biodiversity" take turns going a 5-days field trip with each group of 36 students. The Director of Teaching Assistant of Forest Biodiversity is in charge of managing two Astronomy Teaching Assistants from the NTU Astronomy Club in each field trip group. I also served as a Astronomy Teaching Assistant three times (May 2017, Nov. 2017, and Jun. 2018) teaching the introduction of Astronomy and star identification.
+    </p>
+  </div>
+</article>
+
+<!--
 <article id="2015-googleserve">
   <div class="cell-image">
     <a href="image/activities/uku.jpg" class="image thumb-big">
@@ -33,11 +61,8 @@
   </div>
   <div class="cell-text-photo">
     <h3>Student Volunteer</h3>
-    <p>I joined the NTU Ukulele Club from September 2013 to September 2014, and served as a Student Volunteer in January 2014 to launch a 5-day Charity Camp for countryside elementary schools. In this event, we raised ukuleles and taught disadvantaged children to play ukulele. This event was reported on United Daily News (UDN) and Liberty Times Net (LTN), two of the largest media companies in Taiwan.</p>
-
-    <p> News articles for this event written in Chinese:
-      <li>[<a href="http://news.ltn.com.tw/news/local/paper/749474">news by LTM</a>]</br>
-      <li>[<a href="https://read.muzikair.com/tw/news/台大生讀書不忘回饋社會，走入偏鄉送40把烏克麗麗-5987.html">news by UDN</a>]
+    <p>
+      I joined the NTU Astronomy Club from September 2016 to June 2019, and served as Director of Astronomy Teaching Assistant of Forest Biodiversity from September 2017 to June 2018. In each semester, there are 6 groups of students in NTU course "Introduction to Forest Biodiversity" take turns going a 5-days field trip with each group of 36 students. The Director of Teaching Assistant of Forest Biodiversity is in charge of managing two Astronomy Teaching Assistants from the NTU Astronomy Club in each field trip group. I also served as a Astronomy Teaching Assistant three times (May 2017, Nov. 2017, and Jun. 2018) teaching the introduction of Astronomy and star identification.
     </p>
   </div>
 </article>
@@ -115,29 +140,7 @@
     <p>In 2009 when I was a senior high school student, I served as Director of Public Relation in the Sign Language Club at the Affiliated Senior High School of National Taiwan Normal University. Specifically, I was in charge of coordinating with Club representatives from other senior high schools. I also organized a joint performance with 31 senior high schools for more than 1,300 audience.</p>
   </div>
 </article>
+-->
 
-<article id="2009-marathon-fubon">
-  <div class="cell-image">
-    <a href="image/activities/calligraphy_full.jpg" class="image thumb-big">
-      <img src="image/activities/calligraphy_full.jpg"
-           alt="A full picture of my calligraphy work." />
-    </a>
-    <a href="image/activities/calligraphy_upper.jpg" class="image thumb-big hidden">
-      <img src="image/activities/calligraphy_upper.jpg"
-           alt="A highlight on the upper half of my calligraphy work." />
-    </a>
-    <a href="image/activities/calligraphy_lower.jpg" class="image thumb-big hidden">
-      <img src="image/activities/calligraphy_lower.jpg"
-           alt="A highlight on the lower half of my calligraphy work." />
-    </a>
-    <a href="image/activities/calligraphy_sign.jpg" class="image thumb-big hidden">
-      <img src="image/activities/calligraphy_sign.jpg"
-           alt="A highlight on sign part of my calligraphy work." />
-    </a>
-  </div>
-  <div class="cell-text-photo">
-    <h3>Chinese Calligraphy</h3>
-    <p>I started to practice Chinese calligraphy for 7 years when I was 9 years old. I am able to write in Chinese calligraphy in many kinds of styles, including Small Seal Script, Clerical Script, Regular Script, Semi-cursive Script, and Cursive Script. I love the delicate balance in the character structure and the drastic contrast in the writing intensity in Chinese calligraphy. The left picture was taken from my awarded work (2nd Place) during the Calligraphy Competition in my junior high school. To see the full picture, please click on the left picture.</p>
-  </div>
-</article>
+
 </section>
