--- a/activity.html
+++ b/activity.html
@@ -46,27 +46,60 @@
   <div class="cell-text-photo">
     <h3>NTU Astronomy Club</h3>
     <p>
-      I joined the NTU Astronomy Club from September 2016 to June 2019, and served as Director of Astronomy Teaching Assistant of Forest Biodiversity from September 2017 to June 2018. In each semester, there are 6 groups of students in NTU course "Introduction to Forest Biodiversity" take turns going a 5-days field trip with each group of 36 students. The Director of Teaching Assistant of Forest Biodiversity is in charge of managing two Astronomy Teaching Assistants from the NTU Astronomy Club in each field trip group. I also served as a Astronomy Teaching Assistant three times (May 2017, Nov. 2017, and Jun. 2018) teaching the introduction of Astronomy and star identification.
+      I joined the NTU Astronomy Club from September 2016 to June 2019, and served as Director of Astronomy Teaching Assistant of Forest Biodiversity from September 2017 to June 2018. In each semester, there are 6 groups of students in NTU course "Introduction to Forest Biodiversity" take turns going a 5-days field trip with each group of 36 students. I was in charge of managing two Astronomy Teaching Assistants of the NTU Astronomy Club in each field trip group. I also served as a Astronomy Teaching Assistant three times (May 2017, Nov. 2017, and Jun. 2018) teaching the introduction of Astronomy and star identification.
+    </p>
+  </div>
+</article>
+
+
+<article id="2015-googleserve">
+  <div class="cell-image">
+    <a href="image/activities/night1.jpg" class="image thumb-big">
+      <img src="image/activities/night1.jpg"
+           alt="A photograph taken by UDN. I was the man with red hoodie teaching a girl." />
+    </a>
+    <a href="image/activities/night2.jpg" class="image thumb-big hidden">
+      <img src="image/activities/night2.jpg"
+           alt="A highlight on the upper half of my calligraphy work." />
+    </a>
+    <a href="image/activities/nigh3.jpg" class="image thumb-big hidden">
+      <img src="image/activities/nigh3.jpg"
+           alt="A highlight on the lower half of my calligraphy work." />
+    </a>
+    <a href="image/activities/nigh4.jpg" class="image thumb-big hidden">
+      <img src="image/activities/nigh4.jpg"
+           alt="A highlight on sign part of my calligraphy work." />
+    </a>
+    <a href="image/activities/nigh5.jpg" class="image thumb-big hidden">
+      <img src="image/activities/nigh5.jpg"
+           alt="A highlight on the upper half of my calligraphy work." />
+    </a>
+    <a href="image/activities/nigh6.jpg" class="image thumb-big hidden">
+      <img src="image/activities/nigh6.jpg"
+           alt="A highlight on the lower half of my calligraphy work." />
+    </a>
+    <a href="image/activities/nigh7.jpg" class="image thumb-big hidden">
+      <img src="image/activities/nigh7.jpg"
+           alt="A highlight on sign part of my calligraphy work." />
+    </a>
+    <a href="image/activities/nigh8.jpg" class="image thumb-big hidden">
+      <img src="image/activities/nigh8.jpg"
+           alt="A highlight on the lower half of my calligraphy work." />
+    </a>
+    <a href="image/activities/nigh9.jpg" class="image thumb-big hidden">
+      <img src="image/activities/nigh9.jpg"
+           alt="A highlight on sign part of my calligraphy work." />
+    </a>
+  </div>
+  <div class="cell-text-photo">
+    <h3>Night Activity of CSIE Department</h3>
+    <p>
+      The Department of Computer Science and Information Engineering (CSIE) hosts a night activity in every March. Because I love singing and acting, I joined the crew, band, and guitar group every year from March 2012 to March 2015. I was in charge of the Freshman Drama and served as the leading actor in March 2012; I played drum for the Sophomore Band in March 2013; and I served as the vocalist of the band and guitar group in March 2014 to March 2015 while I was a junior and senior student.
     </p>
   </div>
 </article>
 
 <!--
-<article id="2015-googleserve">
-  <div class="cell-image">
-    <a href="image/activities/uku.jpg" class="image thumb-big">
-      <img src="image/activities/uku.jpg"
-           alt="A photograph taken by UDN. I was the man with red hoodie teaching a girl. " />
-    </a>
-  </div>
-  <div class="cell-text-photo">
-    <h3>Student Volunteer</h3>
-    <p>
-      I joined the NTU Astronomy Club from September 2016 to June 2019, and served as Director of Astronomy Teaching Assistant of Forest Biodiversity from September 2017 to June 2018. In each semester, there are 6 groups of students in NTU course "Introduction to Forest Biodiversity" take turns going a 5-days field trip with each group of 36 students. The Director of Teaching Assistant of Forest Biodiversity is in charge of managing two Astronomy Teaching Assistants from the NTU Astronomy Club in each field trip group. I also served as a Astronomy Teaching Assistant three times (May 2017, Nov. 2017, and Jun. 2018) teaching the introduction of Astronomy and star identification.
-    </p>
-  </div>
-</article>
-
 <article id="2008-aiesec-wncf">
   <div class="cell-image">
     <a href="image/activities/MSRA.jpg" class="image thumb-big">
