--- a/activity.html
+++ b/activity.html
@@ -6,7 +6,11 @@
   <div class="cell-image">
     <a href="image/activities/OS.jpg" class="image thumb-big">
       <img src="image/activities/OS.jpg"
-           alt="The instructed textbook in the Operating System Concepts" />
+           alt="The instructed textbook in Operating Systems" />
+    </a>
+    <a href="image/activities/DM.jpg" class="image thumb-big">
+      <img src="image/activities/DM.jpg"
+           alt="The instructed textbook in Discrete Mathematics" />
     </a>
   </div>
   <div class="cell-text-photo">
@@ -62,10 +66,12 @@
       <img src="image/activities/night2.jpg"
            alt="A highlight on the upper half of my calligraphy work." />
     </a>
+    <!--
     <a href="image/activities/nigh3.jpg" class="image thumb-big hidden">
       <img src="image/activities/nigh3.jpg"
            alt="A highlight on the lower half of my calligraphy work." />
     </a>
+  -->
     <a href="image/activities/nigh4.jpg" class="image thumb-big hidden">
       <img src="image/activities/nigh4.jpg"
            alt="A highlight on sign part of my calligraphy work." />
