--- a/activity.html
+++ b/activity.html
@@ -32,19 +32,19 @@
   <div class="cell-image">
     <a href="image/activities/star3.jpg" class="image thumb-big">
       <img src="image/activities/star3.jpg"
-           alt="A full picture of my calligraphy work." />
+           alt="A full picture of Galaxy at Tataka, Jade Mountain, Taiwan (R.O.C.)." />
     </a>
     <a href="image/activities/star1.jpg" class="image thumb-big hidden">
       <img src="image/activities/star1.jpg"
-           alt="A highlight on the upper half of my calligraphy work." />
+           alt="Star identification at NTU." />
     </a>
     <a href="image/activities/star4.jpg" class="image thumb-big hidden">
       <img src="image/activities/star4.jpg"
-           alt="A highlight on the lower half of my calligraphy work." />
+           alt="Teaching Assistant of NTU course Introduction to Forest Biodiversity. I am in the front catching water." />
     </a>
     <a href="image/activities/star2.jpg" class="image thumb-big hidden">
       <img src="image/activities/star2.jpg"
-           alt="A highlight on sign part of my calligraphy work." />
+           alt="" />
     </a>
   </div>
   <div class="cell-text-photo">
