--- a/activity.html
+++ b/activity.html
@@ -6,11 +6,11 @@
   <div class="cell-image">
     <a href="image/activities/OS.jpg" class="image thumb-big">
       <img src="image/activities/OS.jpg"
-           alt="The instructed textbook in Operating Systems" />
+           alt="The instructed textbook in Operating Systems." />
     </a>
-    <a href="image/activities/DM.jpg" class="image thumb-big">
+    <a href="image/activities/DM.jpg" class="image thumb-big hidden">
       <img src="image/activities/DM.jpg"
-           alt="The instructed textbook in Discrete Mathematics" />
+           alt="The instructed textbook in Discrete Mathematics." />
     </a>
   </div>
   <div class="cell-text-photo">
@@ -66,12 +66,11 @@
       <img src="image/activities/night2.jpg"
            alt="A highlight on the upper half of my calligraphy work." />
     </a>
-    <!--
     <a href="image/activities/nigh3.jpg" class="image thumb-big hidden">
       <img src="image/activities/nigh3.jpg"
            alt="A highlight on the lower half of my calligraphy work." />
     </a>
-  -->
+    <!--
     <a href="image/activities/nigh4.jpg" class="image thumb-big hidden">
       <img src="image/activities/nigh4.jpg"
            alt="A highlight on sign part of my calligraphy work." />
@@ -96,6 +95,7 @@
       <img src="image/activities/nigh9.jpg"
            alt="A highlight on sign part of my calligraphy work." />
     </a>
+    -->
   </div>
   <div class="cell-text-photo">
     <h3>Night Activity of CSIE Department</h3>
