--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 
   <div class="img-block">
     <div class="cell">
-      <a href="#" class="image avatar"><img src="images/santorini.JPG" alt="Yu-Chen Lin" /></a>
+      <a href="#" class="image avatar"><img src="images/bungy.JPG" alt="Yu-Chen Lin" /></a>
     </div>
   </div>
 
