--- a/activity.html
+++ b/activity.html
@@ -40,11 +40,10 @@
     </a>
     <a href="image/activities/star4.jpg" class="image thumb-big hidden">
       <img src="image/activities/star4.jpg"
-           alt="Teaching Assistant of NTU course Introduction to Forest Biodiversity. I am in the front catching water." />
+           alt="Teaching Assistant of NTU course Introduction to Forest Biodiversity. Took picture with 5 of my students. I am in the front catching water." />
     </a>
     <a href="image/activities/star2.jpg" class="image thumb-big hidden">
-      <img src="image/activities/star2.jpg"
-           alt="" />
+      <img src="image/activities/star2.jpg"/>
     </a>
   </div>
   <div class="cell-text-photo">
@@ -66,36 +65,34 @@
       <img src="image/activities/night2.jpg"
            alt="A highlight on the upper half of my calligraphy work." />
     </a>
-    <a href="image/activities/nigh3.jpg" class="image thumb-big hidden">
-      <img src="image/activities/nigh3.jpg"
+    <a href="image/activities/night3.jpg" class="image thumb-big hidden">
+      <img src="image/activities/night3.jpg"
            alt="A highlight on the lower half of my calligraphy work." />
     </a>
-    <!--
-    <a href="image/activities/nigh4.jpg" class="image thumb-big hidden">
-      <img src="image/activities/nigh4.jpg"
+    <a href="image/activities/night4.jpg" class="image thumb-big hidden">
+      <img src="image/activities/night4.jpg"
            alt="A highlight on sign part of my calligraphy work." />
     </a>
-    <a href="image/activities/nigh5.jpg" class="image thumb-big hidden">
-      <img src="image/activities/nigh5.jpg"
+    <a href="image/activities/night5.jpg" class="image thumb-big hidden">
+      <img src="image/activities/night5.jpg"
            alt="A highlight on the upper half of my calligraphy work." />
     </a>
-    <a href="image/activities/nigh6.jpg" class="image thumb-big hidden">
-      <img src="image/activities/nigh6.jpg"
+    <a href="image/activities/night6.jpg" class="image thumb-big hidden">
+      <img src="image/activities/night6.jpg"
            alt="A highlight on the lower half of my calligraphy work." />
     </a>
-    <a href="image/activities/nigh7.jpg" class="image thumb-big hidden">
-      <img src="image/activities/nigh7.jpg"
+    <a href="image/activities/night7.jpg" class="image thumb-big hidden">
+      <img src="image/activities/night7.jpg"
            alt="A highlight on sign part of my calligraphy work." />
     </a>
-    <a href="image/activities/nigh8.jpg" class="image thumb-big hidden">
-      <img src="image/activities/nigh8.jpg"
+    <a href="image/activities/night8.jpg" class="image thumb-big hidden">
+      <img src="image/activities/night8.jpg"
            alt="A highlight on the lower half of my calligraphy work." />
     </a>
-    <a href="image/activities/nigh9.jpg" class="image thumb-big hidden">
-      <img src="image/activities/nigh9.jpg"
+    <a href="image/activities/night9.jpg" class="image thumb-big hidden">
+      <img src="image/activities/night9.jpg"
            alt="A highlight on sign part of my calligraphy work." />
     </a>
-    -->
   </div>
   <div class="cell-text-photo">
     <h3>Night Activity of CSIE Department</h3>
