--- a/publication.html
+++ b/publication.html
@@ -11,16 +11,19 @@
       <b>SERIL: Noise Adaptive Speech Enhancement using Regularization-based Incremental Learning</b>.<br />
       Chi-Chang Lee, <u>Yu-Chen Lin</u>, Hsuan-Tien Lin, Hsin-Min Wang, and Yu Tsao.<br />
       in <i>INTERSPEECH</i>, 2020<br />
+      - A top conference in International Speech Communication Association (ISCA).
     </li>
     <li>
       <b>IA-NET: Acceleration and Compression of Speech Enhancement using Integer-adder Network</b>.<br />
       <u>Yu-Chen Lin</u>, Yi-Te Hsu, Szu-Wei Fu, Yu Tsao, and Tei-Wei Kuo.<br />
       in <i>INTERSPEECH</i>, 2019<br />
+      - A top conference in International Speech Communication Association (ISCA).
     </li>
     <li>
       <b>Autonomous I/O for Intermittent IoT Systems</b>.<br />
       <u>Yu-Chen Lin</u>, Pi-Cheng Hsiu, and Tei-Wei Kuo.<br />
       in <i>IEEE/ACM International Symposium on Low Power Electronics and Design (ISLPED)</i>, 2019<br />
+      - A top conference in Design Automation, with an acceptance rate of only 24.1%.
     </li>
 
     <li>
