--- a/activity.html
+++ b/activity.html
@@ -40,10 +40,11 @@
     </a>
     <a href="image/activities/star4.jpg" class="image thumb-big hidden">
       <img src="image/activities/star4.jpg"
-           alt="Teaching Assistant of NTU course Introduction to Forest Biodiversity. Took picture with 5 of my students. I am in the front catching water." />
+           alt="Teaching Assistant. Took picture with 5 of my students. I am in the middle catching water." />
     </a>
     <a href="image/activities/star2.jpg" class="image thumb-big hidden">
-      <img src="image/activities/star2.jpg"/>
+      <img src="image/activities/star2.jpg"
+           alt="A full picture of Galaxy at Tataka, Jade Mountain, Taiwan (R.O.C.)." />
     </a>
   </div>
   <div class="cell-text-photo">
@@ -59,39 +60,39 @@
   <div class="cell-image">
     <a href="image/activities/night1.jpg" class="image thumb-big">
       <img src="image/activities/night1.jpg"
-           alt="A photograph taken by UDN. I was the man with red hoodie teaching a girl." />
+           alt="Junior Band in March 2014. I am in the upper-middle." />
     </a>
     <a href="image/activities/night2.jpg" class="image thumb-big hidden">
       <img src="image/activities/night2.jpg"
-           alt="A highlight on the upper half of my calligraphy work." />
+           alt="Junior Guitar Group in March 2014. I am at the upper left corner." />
     </a>
     <a href="image/activities/night3.jpg" class="image thumb-big hidden">
       <img src="image/activities/night3.jpg"
-           alt="A highlight on the lower half of my calligraphy work." />
+           alt="Junior Band in March 2014. I am in the middle." />
     </a>
     <a href="image/activities/night4.jpg" class="image thumb-big hidden">
       <img src="image/activities/night4.jpg"
-           alt="A highlight on sign part of my calligraphy work." />
+           alt="Sophomore Band in March 2013." />
     </a>
     <a href="image/activities/night5.jpg" class="image thumb-big hidden">
       <img src="image/activities/night5.jpg"
-           alt="A highlight on the upper half of my calligraphy work." />
+           alt="Senior Guitar Group in March 2015. I am the one on the third from the left." />
     </a>
     <a href="image/activities/night6.jpg" class="image thumb-big hidden">
       <img src="image/activities/night6.jpg"
-           alt="A highlight on the lower half of my calligraphy work." />
+           alt="Senior Guitar Group in March 2015. I am on the left of the picture." />
     </a>
     <a href="image/activities/night7.jpg" class="image thumb-big hidden">
       <img src="image/activities/night7.jpg"
-           alt="A highlight on sign part of my calligraphy work." />
+           alt="Senior Guitar Group in March 2015. I am in the middle of the front." />
     </a>
     <a href="image/activities/night8.jpg" class="image thumb-big hidden">
       <img src="image/activities/night8.jpg"
-           alt="A highlight on the lower half of my calligraphy work." />
+           alt="Freshman Drama in March 2012." />
     </a>
     <a href="image/activities/night9.jpg" class="image thumb-big hidden">
       <img src="image/activities/night9.jpg"
-           alt="A highlight on sign part of my calligraphy work." />
+           alt="Freshman Drama in March 2012. I am on the right of the picture." />
     </a>
   </div>
   <div class="cell-text-photo">
