--- a/activity.html
+++ b/activity.html
@@ -40,7 +40,7 @@
     </a>
     <a href="image/activities/star4.jpg" class="image thumb-big hidden">
       <img src="image/activities/star4.jpg"
-           alt="Teaching Assistant. Took picture with 5 of my students. I am in the middle catching water." />
+           alt="Teaching Assistant. I am in the middle catching water and the others are 5 of my students." />
     </a>
     <a href="image/activities/star2.jpg" class="image thumb-big hidden">
       <img src="image/activities/star2.jpg"
