--- a/publication.html
+++ b/publication.html
@@ -7,6 +7,13 @@
       <u>Yu-Chen Lin</u>, Yi-Te Hsu, Szu-Wei Fu, Cheng Yu, Yu Tsao, and Tei-Wei Kuo.<br />
       submitted to <i>IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP)</i>, 2021<br />
     </li>
+
+    <li>
+      <b>Boosting Objective Scores of a Speech Enhancement Model by MetricGAN Post-processing</b>.<br />
+      Szu-Wei Fu, Chien-Feng Liao, Tsun-An Hsieh, Kuo-Hsuan Hung, Syu-Siang Wang, Cheng Yu, Heng-Cheng Kuo, Ryandhimas E. Zezario, You-Jin Li, Shang-Yi Chuang, Yen-Ju Lu, <u>Yu-Chen Lin</u>, Yu Tsao.<br />
+      in <i>Asia-Pacific Signal and Information Processing Association (APSIPA)</i>, 2020<br />
+    </li>
+    
     <li>
       <b>SERIL: Noise Adaptive Speech Enhancement using Regularization-based Incremental Learning</b>.<br />
       Chi-Chang Lee, <u>Yu-Chen Lin</u>, Hsuan-Tien Lin, Hsin-Min Wang, and Yu Tsao.<br />
