--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <section>
   <p>
     <br />
-    <a href="doc/GHLEE_CV_final.pdf" target="_blank">Download pdf version</a>
+    <a href="doc/CV.pdf" target="_blank">Download pdf version</a>
   </p>
 </section>
 
